--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         overflow: hidden;
     }
     #main-content { display: flex; width: 100vw; height: 100vh; }
-    #file-browser-container { width: 350px; min-width: 250px; height: 100%; background-color: #252526; color: #ccc; display: flex; flex-direction: column; border-right: 2px solid #000; resize: horizontal; overflow: auto; }
+    #file-browser-container { width: 350px; min-width: 250px; height: 100%; background-color: #252526; color: #ccc; display: flex; flex-direction: column; border-right: 2px solid #2f2b2b; resize: horizontal; overflow: auto; }
     #file-browser-header { padding: 8px 12px; background-color: #333; border-bottom: 1px solid #000; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
     #current-path { font-weight: bold; color: #fff; }
     #file-list { list-style: none; padding: 0; margin: 0; flex-grow: 1; overflow-y: auto; }
